2006-01-15  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixUserInfo.cs: The UnixUserInfo(Native.Passwd) constructor and 
	  ToPasswd() should clone the underlying Native.Passwd, so
	  that it doesn't get changed from underneath it.
	* UnixGroupInfo.cs: The UnixGroupInfo(Native.Group) constructor should also
	  clone the provided Native.Group instance.

2006-01-14  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixGroupInfo.cs: ToGroup() should clone the underlying Native.Group, so
	  that it doesn't get changed from underneath it.

2006-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* Catalog.cs, UnixMarshal.cs: Throw `UnixIOException(Native.Errno.ENOMEM)`
	  instead of System.OutOfMemoryException.  OOME should be reserved for use 
	  by the CLR (according to FxDG).

2006-01-12  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixPath.cs: Add ReadLink() and TryReadLink() methods.

2006-01-12  Miguel de Icaza  <miguel@novell.com>

	* PeerCred.cs: Do not define PeerCredData as this is a structure
	known to the runtime.  Instead use the Mono.Posix.PeerCredData
	internal class. 

2006-01-10  Jonathan Pryor <jonpryor@vt.edu>

	* Catalog.cs: Don't use
	  System.Runtime.InteropServices.Marshal.StringToHGlobalAuto(), use
	  UnixMarshal.StringToHeap().  We require that the converted string be in
	  UTF-8 format, but .NET's Marshal.StringToHGlobalAuto converts to the local
	  code page, *not* UTF-8 (Mono's does UTF-8).  UnixMarshal.StringToHeap
	  *always* does UTF-8, so use that instead.

2006-01-09  Jonathan Pryor <jonpryor@vt.edu>

	* FileTypes.cs: Remove [Flags] attribute -- these aren't bitfield values.
	* UnixFileSystemInfo.cs: Fix Is<<Type>> properties -- before it would
	  erroneously say that a symlink was a character device.  (This is because
	  device values are *not* [Flags] values, but code was assuming they were.)
	* UnixGroupInfo.cs: Clone the string[] returned from GetMemberNames().  We
	  don't want callers to change the underlying list.

2006-01-07  Jonathan Pryor <jonpryor@vt.edu>
